- AI:
	- Fix AI not going into Ramming mode when guns possess ammo, but not enough to meet resourceRequestAmount of mounted weapons.
	- Orbital AI now automatically disables gimbal on reverse thrust and RCS engines (gimbal directions for these are incorrect).
	- Add missing sonar checks for AIs trying to fire torpedoes.
- UI:
	- Improve prevention of click-through of various windows in the editor.
	- Open sections of the AI GUI now remain open when switching between flight and editor.
	- Competition UI text in the upper left corner now properly scales when adjusting UI_SCALE.
-Countermeasures:
	- Fix NRE from countermeasure droppers missing a ejectTransform in the .cfg.
	- Fix Acousic Decoy launcher launch direction.
	- Fix Bubble Curtain launcher NRE.
- Weapons:
	- Adjust bullet tracers to lead up to their current position instead of from their previous position.
	- Reduce bullet tracer visual glitching due to krakensbane adjustments.
	- Weapons will now properly report Ammo Depleted when ammo remaining is less than amount required to fire.
	- Fix weapons refusing to fire when one shot left when using multiple ammo boxes with differing starting ammo amounts due to floating point errors.
	- Explosive beehive submunition explosion FX now scaled based on submunition tntMass, not parent HE VFX.
	- Fix weapons with reload animations adding an extra 1-20s to the reload time, based on fire anim length.
	- Add new 'postFireChargeAnim' field for weapons with charge animations to specify if the animation should play in reverse to deactivate the weapon after firing.
	- Fix weapons with reload sounds using oneShotSound = false immediately stopping the SFX when switching to a different weapon.
	- Fix weapons with spindown anims when they stop firing that have overheated under AI control not spinning down until they've cooled down.
	- Missiles:
		- Add 'cruiseRangeTrigger' field to Missiles. Missiles using this will delay firing Cruise motor until within set distance to target.